<resources>
    <string name="app_name">CPH</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget Password?</string>
    <string name="i_m_not_an_admin">I\'m not an Admin?</string>
    <string name="i_m_an_admin">I\' am Admin?</string>
    <string name="login">Login</string>
    <string name="not_a_member_click_to_signup">Not a Member ! Click to SignUp</string>
    <string name="create_account">Create Account</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="usernmame">Usernmame</string>
    <string name="child_name">Child Name</string>
    <string name="dob">DOB</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="username">Username</string>
</resources>
