<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/register_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:hint="@string/usernmame"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/register_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/register_username_input"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="19sp"
        />

    <EditText
        android:id="@+id/register_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email_input"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="Phone Number"
        android:inputType="phone"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="19sp"
        android:layout_marginTop="6dp" />


    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_phone_number_input"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="15dp"
        android:hint="password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="19sp" />
    <EditText
        android:id="@+id/con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password_input"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="15dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="19sp" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_below="@+id/con"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/txt_radiomale"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/male"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/txt_radiofemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/female"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttonshape"
        android:padding="17dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        android:clickable="true"
        android:focusable="true"/>

</RelativeLayout>