<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailOfRecord"
    android:orientation="vertical">


    <EditText
        android:id="@+id/dRTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:text="@string/title"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dRDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/description"
        android:textColorHint="@color/colorPrimary"
        android:textSize="19sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/dR_btnUpdate"
            android:onClick="btnUpdateRecord"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/update"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <Button
            android:id="@+id/dR_btnDelete"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:backgroundTint="#4CAF50"
            android:onClick="btnDeleteRecord"
            android:text="Delete"
            android:textColor="#ffffff"
            android:textSize="22sp" />

    </LinearLayout>

</LinearLayout>