<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".SignInActivity">


    <ImageView
        android:id="@+id/login_applogo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/cph"/>

    <EditText
        android:id="@+id/register_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_applogo"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/colorPrimary"
        android:textSize="19sp" />


    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email_input"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="15dp"
        android:hint="password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/colorPrimary"
        android:textSize="19sp" />

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password_input"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

<!--        <CheckBox-->
<!--            android:id="@+id/remember_me_chkb"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="17dp"-->
<!--            android:gravity="center_vertical"-->
<!--            android:text="Remember Me"-->
<!--            android:textColor="@color/colorPrimaryDark"-->
<!--            android:textSize="19sp"-->
<!--            android:layout_marginStart="17dp" />-->

        <TextView
            android:id="@+id/forget_password_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/forget_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="19sp"
            android:layout_marginStart="20dp" />

    </LinearLayout>
    <Button
        android:id="@+id/loginAdmin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_1"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttonshape"
        android:padding="17dp"
        android:text="Admin Login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_1"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttonshape"
        android:padding="17dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:clickable="true"
        android:focusable="true"/>


    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/admin_panel_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="23dp"
            android:text="@string/i_m_an_admin"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/not_admin_panel_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_m_not_an_admin"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:visibility="visible" />
    </LinearLayout>

    <TextView
        android:id="@+id/notAMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_2"
        android:layout_marginLeft="15dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/not_a_member_click_to_signup"
        android:gravity="center_horizontal" />

</RelativeLayout>